# django-pratical-course

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
monthly_challenges/challenges/: views.py
monthly_challenges/challenges/templates/challenges/: challenge.html  index.html
monthly_challenges/monthly_challenges/: settings.py  urls.py
monthly_challenges/templates/: 404.html  base.html
